# yaaf

./: .covdbg.yaml  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODEBASE_EXPLORATION.md  README.md  docker-compose.mitmproxy.yml  docker-compose.test-stack.yml  mkdocs.yml  requirements-docs.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  setup-vcpkg.sh
.github/: dependabot.yml
.github/agents/: yaaf-issue-agent.agent.md
.github/instructions/: covdbg.instructions.md  cpp-tests.instructions.md  cpp.instructions.md
.github/notes/: issue-12-phase-1-musl-static-linux.md
.github/research/: lua-process-api-contracts.md
.github/skills/yaaf-covdbg-unit-test-coverage/: SKILL.md
.github/skills/yaaf-docs-maintenance/: SKILL.md
.github/skills/yaaf-feature-proposal-issue-planning/: SKILL.md
.github/skills/yaaf-feature-proposal-issue-planning/assets/: task-template.md
.github/skills/yaaf-mcp-protocol-support/: SKILL.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pages.yml
.tasks/: lua-process-start-and-platform-runtime-surface.md  mcp-stdio-host-bridge.md  slug.md  vcpkg-submodule-cross-platform.md
app/: CMakeLists.txt  console_utf8.h  console_utf8.posix.cpp  console_utf8.win32.cpp  main.cpp
cmake/: SyncDotenv.cmake
docs/: index.md  lua.md  mcp.md  usage.md
docs/examples/: basic-cli.md  direct-script.md  echo-tool.md  index.md  lua-mcp-bridge.md  mcp-http-server.md  mcp-http-sse-fixtures.md  mcp-stdio-variables.md  weather-agent.md
docs/modules/: agent.md  agents-react.md  http.md  index.md  json.md  llm.md  mcp.md  process.md  tool.md  tools-echo.md  yaaf.md
docs/tools/: index.md
examples/: example.lua  mcp_host_example.lua  weather_agent.lua
libyaaf/: CMakeLists.txt
libyaaf/cli/: cli.cpp  cli.h
libyaaf/config/: dotenv.cpp  dotenv.h
libyaaf/http/: CMakeLists.txt  http_client.cpp  http_client.h
libyaaf/llm/: llm.h
libyaaf/mcp/: README.md  mcp_client.cpp  mcp_client.h  mcp_client_stdio.h  mcp_client_stdio.posix.cpp  mcp_client_stdio.win32.cpp  mcp_host.cpp  mcp_host.h  mcp_host_stdio.cpp  mcp_host_stdio.h  mcp_schema.h  mcp_schema_generated.cpp  mcp_schema_generated.h
libyaaf/mcp/schema/: schema-2024-11-05.cpp  schema-2025-03-26.cpp  schema-2025-06-18.cpp  schema-2025-11-25.cpp
libyaaf/pch/: CMakeLists.txt  pch_dependencies.h  pch_std.h
libyaaf/platform/: executable_path.cpp  executable_path.h  platform_name.cpp  platform_name.h
libyaaf/process/: CMakeLists.txt  process.h  process_posix.cpp  process_win32.cpp
libyaaf/script/: lua_runtime.cpp  lua_runtime.h
libyaaf/script/modules/: agent.cpp  agent.h  lua_module_utils.cpp  lua_module_utils.h  script_agent.cpp  script_agent.h  script_http.cpp  script_http.h  script_json.cpp  script_json.h  script_llm.cpp  script_llm.h  script_mcp.cpp  script_mcp.h  script_process.cpp  script_process.h  script_yaaf.cpp  script_yaaf.h  tool.cpp  tool.h
lua/agents/: react.lua
lua/cli/: agent.lua  ask.lua  chat.lua  doctor.lua  embed.lua
lua/llm/providers/: echo.lua  ollama.lua  openai.lua
lua/tools/: echo.lua
mcp-servers/: README.md  hello_common.py  hello_http.py  hello_sse.py  hello_stdio.py  pyproject.toml
scripts/: Format.ps1  UpdateMcpSchemas.ps1
tests/: CMakeLists.txt
tests/integration/: http_client_tests.cpp  mcp_client_tests.cpp  mcp_fixture_tests.cpp
tests/integration/docker/: mcp_client_docker_tests.cpp
tests/integration/http/: http_client_tests.cpp
tests/integration/llm/: provider_http_contract_tests.cpp
tests/integration/mcp/: mcp_http_provider_flow_tests.cpp  mcp_lua_host_tests.cpp  mcp_stdio_client_tests.cpp  mcp_stdio_runtime_tests.cpp
tests/integration/ollama/: ollama_client_tests.cpp
tests/mock/: agent_tests.cpp  cli_agent_command_tests.cpp  cli_ask_command_tests.cpp  cli_chat_command_tests.cpp  cli_embed_command_tests.cpp  cli_runtime_tests.cpp  mcp_command_tests.cpp  mcp_protocol_tests.cpp  script_lua_tests.cpp
tests/plain/: dotenv_tests.cpp  mcp_config_schema_tests.cpp
tests/support/: http_test_server.h  llm_provider_test_support.h  mcp_test_support.h  runtime_test_environment.h  test_process_environment.cpp
triplets/: x64-linux-musl-static.cmake
